--- a/wednesday/index.html
+++ b/wednesday/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> <!-- ASCII 7-bit 8-bit EASCII FR SP -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <nav>
