--- a/wednesday/index.html
+++ b/wednesday/index.html
@@ -14,7 +14,11 @@
     </nav>
     <h1>Home</h1>
     <p>
-        Hello home  world!!!
+        Happy Birthday!!!
     </p>
+    <main>
+        <img src="./hat.jpg" alt="birthday hat" class="fun">
+        <img src="./cake.jpg" alt="birthday cake" class="fun">    
+    </main>
 </body>
 </html>
