--- a/forms/index.html
+++ b/forms/index.html
@@ -7,12 +7,12 @@
     <style>
         body {
             /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-            background-color: bisque;
+            background-color: darkkhaki;
             color: darkred;
         }
 
         .registration {
-            background-color: white;
+            background-color: bisque;
             width: 80%;
             /* height: 50vh; */
             margin: auto;
