--- a/forms/index.html
+++ b/forms/index.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
+    <title>Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -9,7 +13,8 @@
             /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
             background-color: darkkhaki;
             color: darkred;
-        }
+            }
+        
 
         .registration {
             background-color: bisque;
@@ -22,6 +27,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1> My Site</h1>
@@ -48,6 +54,7 @@
         </div>
         <input type="submit" value="Register" class="register btn btn-primary">
         <!-- </form> -->
-
     </div>
 </body>
+
+</html>
